src/objects/MUSW__Inspection_Violation__c.object
<CustomObject>
    <fields>
        <fullName>Days_to_correct__c</fullName>
        <formula>MUSW__Violation__r.Days_to_correct__c</formula>
        <label>Days to correct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Followup_Days__c</fullName>
        <description>Followup Days</description>
        <label>Followup Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Inspection Violations</relationshipLabel>
        <relationshipName>Inspection_Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Complaint2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated Complaint.</description>
        <label>Complaint</label>
        <referenceTo>MUSW__Complaint2__c</referenceTo>
        <relationshipLabel>Inspection Violations</relationshipLabel>
        <relationshipName>Inspection_Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__DREgen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, the record was copied from a prior inspection as opposed to a new inspection. This is used by the DRE in the out of the box Code Enforcement Configuration.</description>
        <label>DREgen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Inspection__c</fullName>
        <description>Associated Inspection (required). This allows multiple violations to be recorded per inspection.</description>
        <label>Inspection</label>
        <referenceTo>MUSW__Inspection__c</referenceTo>
        <relationshipLabel>Violations</relationshipLabel>
        <relationshipName>Inspection_Violations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MUSW__Parcel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated Parcel (Address).</description>
        <label>Parcel</label>
        <referenceTo>MUSW__Parcel__c</referenceTo>
        <relationshipLabel>Inspection Violations</relationshipLabel>
        <relationshipName>Inspection_Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Violation__c</fullName>
        <description>Associated Violation. This allows the same violation to be worked within the re-inspection.</description>
        <label>Violation</label>
        <referenceTo>MUSW__Violation__c</referenceTo>
        <relationshipLabel>Inspections</relationshipLabel>
        <relationshipName>Violation_Inspections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Master_Inspection_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Master Inspection List</description>
        <label>Master Inspection List</label>
        <referenceTo>MUSW__Master_Inspection_List__c</referenceTo>
        <relationshipLabel>Inspection Violations</relationshipLabel>
        <relationshipName>Inspection_Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ordinance__c</fullName>
        <formula>MUSW__Violation__r.Ordinance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ordinance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Inspection Violations</relationshipLabel>
        <relationshipName>Inspection_Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reinspection_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reinspection Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ViolationIsClosed__c</fullName>
        <formula>MUSW__Violation__r.IsClosed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ViolationIsClosed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Violation_DateTime__c</fullName>
        <formula>IF(NOT(ISBLANK( MUSW__Violation__r.Cited_DateTime__c)), MUSW__Violation__r.Cited_DateTime__c, MUSW__Violation__r.CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Violation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Violation_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Violation Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Inspection Violation</label>
    <nameField>
        <displayFormat>IV-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Violations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>